# Practicas_CAP

./: .gitignore  README.md
Descipher_enigma/Practica1/: CMakeLists.txt
Descipher_enigma/Practica1_2/: Practica1_2.c
Descipher_enigma/Practica1_3/: Practica1_3.cpp
InfoMemoria/: PRACTICA 1.md
Memorias/Practica 1/: Practica 1- MPI(copia).docx  ~$actica 1- MPI(copia).docx
Practica1/: CMakeLists.txt  main.c
Practica1_2/: CMakeLists.txt  Practica1_2.c  copiaSeguridadP1_2
Practica1_3/: CMakeLists.txt  Practica1_3.h
Practica2/: .gitignore  CMakeLists.txt  CopiaSeguridadP2.txt  Practica2.cpp  Practica2.h  main.cpp  resultado.txt
Practica2/Archivos originales/: Crystalline.cpp  Metallic.cpp  Scene.cpp  Sphere.cpp  Vec3.cpp  random.cpp  utils.cpp
Practica2/Header/: random.h
Practica2/Original/: Vec3.cpp  random.cpp  utils.cpp
Practica2_1_openmp/: Practica2_1.cpp
Practica2_1_openmp/Practica2_1/: CMakeLists.txt  Practica2_1.cpp  Practica2_1.h  resultados.txt  seguridad.txt
Practica2_1_openmp_mpi/: CMakeLists.txt
Practica2_1_openmp_mpi/Header/: random.h
Practica2_1_openmp_mpi/Practica2_1_2/: Practica2_1_2.cpp  Practica2_1_2.h  resultado.txt
Practica2_1_openmp_mpi/Practica2_1_2/Original/: Crystalline.cpp  Scene.cpp
Practica2_2/: CMakeLists.txt
Practica2_2/Practica2_2/: CMakeLists.txt  Columnas.txt  Practica2_2.cpp  resultado.txt
Practica2_2/Practica2_2/Header/: random.h
Practica2_2/Practica2_2/Original/: Sphere.cpp
Practica2_2_mpi_parche/Original/: random.cpp
Practica2_2_mpi_parche/Practica2_2/: Practica2_2.cpp  Practica2_2.h  resultado.txt
Pruebas/enigma/: CMakeLists.txt  main.c
RayTracing/Practica2/: Practica2.cpp
RayTracing/Practica2/Original/: Crystalline.cpp  Metallic.cpp  Scene.cpp
RayTracing/Practica2_2_mpi_parche/Original/: utils.cpp
